tests/config_file_extensions/config_file_extensions.exp
Error ------------------------------------------------------------------------------------------------- test.js.es6:6:10

Cannot use operator `*` with operands string [1] and number [2] [unsafe-arithmetic]

   test.js.es6:6:10
   6|   return x * 10;
               ^^^^^^

References:
   test.js.es6:5:17
   5| function foo(x: string) {
                      ^^^^^^ [1]
   test.js.es6:6:14
   6|   return x * 10;
                   ^^ [2]


Error ------------------------------------------------------------------------------------------------ test.js.es6:14:19

Cannot get `Object.prototype.toString` because property `toString` [1] cannot be unbound from the context [2] where it
was defined. [method-unbinding]

   test.js.es6:14:19
    14| (Object.prototype.toString: Function);
                          ^^^^^^^^ [1]

References:
   <BUILTINS>/core.js:240:5
   240|     toString(): string;
            ^^^^^^^^^^^^^^^^^^ [2]



Found 2 errors
